fix: Cambiato sistema di gestione dati michelin: file unico al posto di file separati e riferimento ad utente nullo al posto di uno fittizio